--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       -webkit-backdrop-filter: blur(8px);
     }
     h1, h2 {
-      color: white;
+      color: black;
       text-align: center;
     }
     .product-section {
