--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       padding: 10px;
       width: 160px;
       text-align: center;
-      color: white;
+      color: black;
     }
     .product img {
       width: 100%;
