--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VapesTob</title>
   <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-      background: url('https://i.postimg.cc/kGMGfnjF/1.jpg') no-repeat center center fixed;
-      background-size: cover;
-      backdrop-filter: blur(8px);
-      -webkit-backdrop-filter: blur(8px);
+  body {
+    background-image: url('fondo-vapestob.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    font-family: Arial, sans-serif;
+  }
+</style>
+
     }
     h1, h2 {
       color: black;
